force-app/main/default/objects/RatingCredit__c/RatingCredit__c.object-meta.xml
<CustomObject>
    
    <label>Rating de Crédito</label>
    <nameField>
        <displayFormat>RAT-{0000}</displayFormat>
        <label>Nome de Rating de Crédito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ratings de Crédito</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>