force-app/main/default/objects/RatingCredit__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Ratings de Crédito</relationshipLabel>
    <relationshipName>Ratings_de_Cr_dito</relationshipName>
    <type>Lookup</type>
</CustomField>