force-app/main/default/objects/RatingCredit__c/fields/RatingSAP__c.field-meta.xml
<CustomField>
    <fullName>RatingSAP__c</fullName>
    <label>Tend.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
                <label>Muito Positivo</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Positivo</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Invariável</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Negativo</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Muito Negativo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>