force-app/main/default/objects/RatingCredit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Rating__c</columns>
    <columns>RatingSAP__c</columns>
    <columns>Crop__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>